<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        app:srcCompat="@drawable/avatar2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txtTelaLogin"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRA" />

    <EditText
        android:id="@+id/edtRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="8"
        android:hint="@string/txtRA"
        android:inputType="number" />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtRA"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:hint="@string/txtRA"-->

<!--        app:startIconDrawable="@drawable/pessoa1">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtRA"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtSenha"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:hint="@string/txtSenha"-->
<!--        app:endIconMode="password_toggle"-->
<!--        app:startIconDrawable="@drawable/senha">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtSenha"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSenha" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSenha" />

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnConectar" />

</LinearLayout>